# afskylia-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  add-to-path.sh
.github/workflows/: build-and-test.yml
src/: lib.rs  main.rs
src/commands/: build.rs  mod.rs  new.rs  run.rs
src/generators/: html.rs  merge_content.rs  merge_page.rs  mod.rs
src/parsers/: mod.rs
src/parsers/markdown/: component.rs  lexer.rs  mod.rs  token.rs
src/parsers/metadata/: afdatetime.rs  lexer.rs  mod.rs  parser.rs
src/server/: mod.rs  server.rs
