[package]
name = "afskylia"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "afskylia"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = "0.4.24"

[dev-dependencies]
claim = "0.5.0"
uuid = { version = "1", features = ["v4"] }
